--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,13 +15,18 @@ const { noMarginTop = false } = Astro.props;
   <Hr noPadding />
   <div class="footer-wrapper">
     <Socials centered />
-    <div class="copyright-wrapper">
-      <span>Copyright &#169; {currentYear}</span>
+
+    <div class="copyright-wrapper--row pt-4 pb-8">
+      <span>Eder's Path - {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
       <span>All rights reserved</span>
     </div>
+
     <div class="copyright-wrapper">
-      <span>WheyDev&#174; is a registered trademark in Brazil.</span>
+      <span class="leading-4">AVANTI CODER LTDA | 44.271.549/0001-96</span>
+      <span class="leading-4">1748, Engenheiro Luís Carlos Berrini Avenue - Conjunto 1710</span>
+      <span class="leading-4">Cidade Monções, São Paulo, Brazil</span>
+      <span class="leading-4">Zip Code: 04571-000</span>
     </div>
   </div>
 </footer>
@@ -31,7 +36,7 @@ const { noMarginTop = false } = Astro.props;
     @apply w-full;
   }
   .footer-wrapper {
-    @apply flex flex-col items-center justify-between py-6 text-xs sm:py-4;
+    @apply flex flex-col justify-between py-6 text-xs sm:py-4;
   }
   .link-button {
     @apply my-1 p-2 hover:rotate-6;
@@ -40,7 +45,10 @@ const { noMarginTop = false } = Astro.props;
     @apply scale-125;
   }
   .copyright-wrapper {
-    @apply my-2 flex flex-col items-center whitespace-nowrap sm:flex-row;
+    @apply mb-8 flex flex-col gap-2;
+  }
+  .copyright-wrapper--row {
+    @appl sm:flex-row;
   }
   .separator {
     @apply hidden sm:inline;
