--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ const { activeNav } = Astro.props;
   <div class="nav-container">
     <div class="top-nav-wrap">
       <a href="/" class="logo">
-        <img src="/assets/logo.svg" alt="WheyDev" />
+        <h1>Eder's Path</h1>
       </a>
       <nav id="nav-menu">
         <button
@@ -113,10 +113,10 @@ const { activeNav } = Astro.props;
     @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row;
   }
   .top-nav-wrap {
-    @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-8;
+    @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-4;
   }
   .logo {
-    @apply absolute py-1 text-xl font-semibold sm:static sm:text-2xl;
+    @apply absolute sm:relative text-skin-accent text-xl font-semibold sm:text-2xl whitespace-nowrap pt-3 sm:pt-2;
   }
   .hamburger-menu {
     @apply self-end p-2 sm:hidden;
