--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -27,7 +27,7 @@ const { centered = false } = Astro.props;
 
 <style>
   .social-icons {
-    @apply flex-wrap justify-center gap-1;
+    @apply flex-wrap gap-1 mt-4 mb-1;
   }
   .link-button {
     @apply p-2 hover:rotate-6 sm:p-1;
