--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Strengthen Your <br />Coding Foundation</h1>
+      <h2>This is my <br />learn in public path</h2>
       <a
         target="_blank"
         href="/rss.xml"
@@ -37,15 +37,6 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
         </svg>
         <span class="sr-only">RSS Feed</span>
       </a>
-
-      <p>
-        WheyDev is a website created to help people working in programming, or
-        enthusiasts, get stronger by building a more solid tech foundation.
-      </p>
-      <p>
-        Some of our core values include: strength, resilience, determination,
-        discipline, community, knowledge, and curiosity.
-      </p>
     </section>
 
     <Hr />
@@ -110,7 +101,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
   #hero {
     @apply pb-6 pt-8;
   }
-  #hero h1 {
+  #hero h2 {
     @apply my-4 inline-block text-3xl font-bold sm:my-8 sm:text-5xl;
   }
   #hero .rss-link {
