--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,6 @@ const posts = (await getCollection("posts"))
       </header>
       {posts.length === 0 && <p class="m-0">Soon, stay connected.</p>}
 
-    <!-- UNCOMMENT TO SHOW POSTS
       <section class="flex flex-col gap-4 md:flex-row md:flex-wrap">
         {
           posts.length !== 0 &&
@@ -74,7 +73,7 @@ const posts = (await getCollection("posts"))
                 />
               ))
         }
-      </section> -->
+      </section>
     </article>
 
     <article class="flex flex-col gap-8">
