--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -14,7 +14,7 @@ const posts = (await getCollection("posts"))
   );
 ---
 
-<Layout title="Template - All Posts">
+<Layout title="Eder's Path - All Posts">
   <main class="flex flex-col gap-20">
     <h1 class="text-2xl text-neutral-100">Posts</h1>
 
