Add a new color

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -27,8 +27,9 @@
 }
 
 .post blockquote {
-  @apply flex flex-row gap-2 before:block before:h-auto before:w-1 before:max-w-[1px] before:bg-red-400 before:content-[''];
+  @apply flex flex-row gap-2 before:block before:h-auto before:w-1 before:max-w-[1px] before:bg-lightGreenBrand before:content-[''];
 }
+
 
 .post pre {
   @apply p-4;
