--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry, getCollection } from "astro:content";
 import Layout from "@/layouts/Layout.astro";
 import formatDate from "@/utils/formatDate";
 
@@ -22,11 +22,11 @@ const { Content } = await post.render();
 
 <Layout title={post.data.title} description={post.data.description}>
   <main class="post mx-auto flex w-full max-w-prose flex-col gap-4">
-    <header role="presentation">
-      <h1 class="text-md">
+    <header role="presentation" class="pb-4 border-b border-s-slate-50">
+      <h1 class="text-lg text-white">
         {post.data.title} - {formatDate(post.data.publishedAt)}
       </h1>
-      <p class="italic">{post.data.description}</p>
+      <p class="text-md leading-2">{post.data.description}</p>
     </header>
 
     <Content />
