--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ const pathname = removeTrailingSlash(Astro.url.pathname);
 
 ---
 
-<header class="z-40 flex w-full flex-col gap-2 md:flex-row md:justify-between">
+<header class="z-40 flex w-full flex-col gap-2 md:flex-row md:justify-between md:items-center">
   <div class="w-20">
     <svg viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg">
       <g id="green">
