--- a/src/components/seo/SEOTags.astro
+++ b/src/components/seo/SEOTags.astro
@@ -9,7 +9,7 @@ type Props = HeadTags;
 const { title, description, noindex, og } = Astro.props;
 
 const DEFAULT_TITLE_PAGE = "Eder's Path";
-const DEFAULT_DESCRIPTION_PAGE = "Chasing progress, embracing the process. Made in Brazil.";
+const DEFAULT_DESCRIPTION_PAGE = "Chasing progress, embracing the process.";
 const DEFAULT_URL_SITE = SITE_URL;
 
 const openGraph = {
@@ -40,8 +40,8 @@ const openGraph = {
     }}
     extend={{
       link: [
-        { rel: 'manifest', href: '/site.webmanifest' },
-        { rel: 'sitemap', href: '/sitemap-index.xml' },
+        { rel: "manifest", href: "/site.webmanifest" },
+        { rel: "sitemap", href: "/sitemap-index.xml" },
       ],
       meta: [
         { name: "viewport", content: "width=device-width, initial-scale=1" },
